Multi window spin tool crash #64998

Closed
opened 2019-05-22 18:26:05 +02:00 by Aurel P. · 23 comments

System Information
Operating system: Windows-10-10.0.17763 64 Bits
Graphics card: AMD Radeon(TM) R9 290X ATI Technologies Inc. 4.5.13542 Core Profile Context 25.20.14011.5005

Blender Version
Broken: version: 2.80 (sub 71), branch: blender2.7, commit date: 2019-05-20 22:03, hash: e787700393
Worked: (optional)

Short description of error
Using Spin tool with two windows open (both in 3D Viewport) crashes Blender when going out of Edit mode or moving mouse cursor outside window

Exact steps for others to reproduce the error

I have a dual monitor setup.

  1. Open Blender (optional step: File > Defaults > Load factory settings) > Window > New window
  2. Add a mesh
  3. enter Edit mode
  4. use Spin tool
  5. crash occurs when exiting Edit mode or moving the mouse cursor outside of the current window

It works fine with just one window open or if the second window is in another "Editor type"

Tested on both my work and home computers, same behaviour on all tested versions.
I download the latest build every few days and this issue is present on all the builds I have.

**System Information** Operating system: Windows-10-10.0.17763 64 Bits Graphics card: AMD Radeon(TM) R9 290X ATI Technologies Inc. 4.5.13542 Core Profile Context 25.20.14011.5005 **Blender Version** Broken: version: 2.80 (sub 71), branch: blender2.7, commit date: 2019-05-20 22:03, hash: `e787700393` Worked: (optional) **Short description of error** Using Spin tool with two windows open (both in 3D Viewport) crashes Blender when going out of Edit mode or moving mouse cursor outside window **Exact steps for others to reproduce the error** I have a dual monitor setup. 1. Open Blender (optional step: File > Defaults > Load factory settings) > Window > New window 2. Add a mesh 3. enter Edit mode 4. use Spin tool 5. crash occurs when exiting Edit mode or moving the mouse cursor outside of the current window It works fine with just one window open or if the second window is in another "Editor type" Tested on both my work and home computers, same behaviour on all tested versions. I download the latest build every few days and this issue is present on all the builds I have.
Author

Added subscriber: @peticel

Added subscriber: @peticel

Added subscriber: @Leon95

Added subscriber: @Leon95

blender.crash.txt
Can Reproduce only after using the spin Tool. Other Tools or spin tool executed via search don't crash.
Operating system: Linux-4.4.0-148-generic-x86_64-with-debian-stretch-sid 64 Bits
Graphics card: Mesa DRI Intel(R) Sandybridge Mobile Intel Open Source Technology Center 3.3 (Core Profile) Mesa 18.0.5

[blender.crash.txt](https://archive.blender.org/developer/F7061288/blender.crash.txt) Can Reproduce only after using the spin Tool. Other Tools or spin tool executed via search don't crash. Operating system: Linux-4.4.0-148-generic-x86_64-with-debian-stretch-sid 64 Bits Graphics card: Mesa DRI Intel(R) Sandybridge Mobile Intel Open Source Technology Center 3.3 (Core Profile) Mesa 18.0.5

Added subscriber: @Gvgeo-1

Added subscriber: @Gvgeo-1

I cannot reproduce here with 2019-05-22 85322737. Do you still get the crash?

I cannot reproduce here with 2019-05-22 85322737. Do you still get the crash?
Author

System Information
Operating system: Windows-10-10.0.16299 64 Bits
Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 416.81
CPU: AMD Threadripper 1950X
RAM: 64GB DDR4

Home PC: (since it is not specified in the initial post, maybe it matters)
CPU: Intel I7-4770K
RAM: 32GB DDR3

Blender Version
Broken: version: 2.80 (sub 71), branch: blender2.7, commit date: 2019-05-22 21:50, hash: a1ad71304c
Worked: (optional)

Short description of error
Update with the latest build from my work PC

It no longer crashes when moving the mouse cursor outside the window (while using the Spin tool) but still crashes when going out of Edit mode.
Also, as Leon mentioned, executing the tool via Search works fine although I don't get the "controller?" (arc with two plus signs at the ends).

Exact steps for others to reproduce the error
See first post

**System Information** Operating system: Windows-10-10.0.16299 64 Bits Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 416.81 CPU: AMD Threadripper 1950X RAM: 64GB DDR4 Home PC: (since it is not specified in the initial post, maybe it matters) CPU: Intel I7-4770K RAM: 32GB DDR3 **Blender Version** Broken: version: 2.80 (sub 71), branch: blender2.7, commit date: 2019-05-22 21:50, hash: `a1ad71304c` Worked: (optional) **Short description of error** Update with the latest build from my work PC It no longer crashes when moving the mouse cursor outside the window (while using the Spin tool) but still crashes when going out of Edit mode. Also, as Leon mentioned, executing the tool via Search works fine although I don't get the "controller?" (arc with two plus signs at the ends). **Exact steps for others to reproduce the error** See first post

Missed the 2 windows part the first time.

When finishing spin tool the operator return finish state correctly.
But when there are 2 windows, I see that the gizmo_tweak_invoke called again when exiting edit mode. Out of place cannot handle finish state and crashes.

Is it a duplication with the event system?

Missed the 2 windows part the first time. When finishing spin tool the operator return finish state correctly. But when there are 2 windows, I see that the `gizmo_tweak_invoke` called again when exiting edit mode. Out of place cannot handle finish state and crashes. Is it a duplication with the event system?
Brecht Van Lommel changed title from Spin tool crash on dual monitor setup to Multi window spin tool crash 2019-05-29 02:17:52 +02:00
Campbell Barton was assigned by Brecht Van Lommel 2019-05-29 02:17:52 +02:00

Added subscriber: @brecht

Added subscriber: @brecht

Possibly same cause as #63694 (Multi window measure crash).

Possibly same cause as #63694 (Multi window measure crash).

Closed as duplicate of #63694

Closed as duplicate of #63694

Added subscriber: @dfelinto

Added subscriber: @dfelinto

For the records, although this one seems related to #63694, this one I can reproduce from scratch (while the other I cannot). I think the cause may be different altogether.

For the records, although this one seems related to #63694, this one I can reproduce from scratch (while the other I cannot). I think the cause may be different altogether.
Author

Hi.

Not sure if this is considered as fixed already.

Just so you know, this is still an issue in RC1.

Hi. Not sure if this is considered as fixed already. Just so you know, this is still an issue in RC1.

I can not reproduce this since the related fix was addressed. Could you revise if the "How to reproduce steps" are complete? (e.g., New Window or New Main Window, use spin tool in which one of the windows, ...)

I can not reproduce this since the related fix was addressed. Could you revise if the "How to reproduce steps" are complete? (e.g., New Window or New Main Window, use spin tool in which one of the windows, ...)
Author

Hi Dalai.

The steps are same as before:

  1. Open Blender (optional step: File > Defaults > Load factory settings) > Window > New Window OR New Main Window ( tried them both )
  2. Add a mesh or use the default cube
  3. enter Edit mode
  4. use Spin tool ( **!!!very important!!!** - if I select the tool from the F3 search menu, it does not crash - only when selecting Spin from the tool shelf - T menu ) - crashes the same regardless of the window I use
  5. crash occurs when exiting Edit mode

Same behaviour on both work and home PCs

Hi Dalai. The steps are same as before: 1. Open Blender (optional step: File > Defaults > Load factory settings) > Window > New Window OR New Main Window ( tried them both ) 2. Add a mesh or use the default cube 3. enter Edit mode 4. use Spin tool ( `**!!!very important!!!**` - if I select the tool from the F3 search menu, it does not crash - only when selecting Spin from the tool shelf - T menu ) - crashes the same regardless of the window I use 5. crash occurs when exiting Edit mode Same behaviour on both work and home PCs

Confirmed:
SUMMARY: AddressSanitizer: heap-use-after-free //source/blender/windowmanager/gizmo/intern/wm_gizmo_group.c:562 in gizmo_tweak_modal
Full backtrace: P1038

Confirmed: `SUMMARY: AddressSanitizer: heap-use-after-free //source/blender/windowmanager/gizmo/intern/wm_gizmo_group.c:562 in gizmo_tweak_modal` Full backtrace: [P1038](https://archive.blender.org/developer/P1038.txt)
Author

Changed status from 'Duplicate' to: 'Open'

Changed status from 'Duplicate' to: 'Open'
Aurel P. reopened this issue 2019-07-26 09:18:57 +02:00
Author

Hi again,

This is still an issue in RC3.

Same steps to reproduce as above.

Hi again, This is still an issue in RC3. Same steps to reproduce as above.

Added subscriber: @brinux

Added subscriber: @brinux

This is still crashing Blender to desktop with the release of Blender 2.8

Steps to reproduce are the same:

  1. open two windows
  2. go into edit mode
  3. use the spin tool from the icon shelf (not from the menu, but the icon shelf at the left)
  4. spin some verts
  5. exit edit mode and watch the crash to desktop
This is **still crashing Blender to desktop** with the release of Blender 2.8 Steps to reproduce are the same: 1) open two windows 2) go into edit mode 3) use the spin tool from the icon shelf (not from the menu, but the icon shelf at the left) 4) spin some verts 5) exit edit mode and watch the crash to desktop

Added subscriber: @xdanic

Added subscriber: @xdanic

This issue was referenced by 82e719ff87

This issue was referenced by 82e719ff8764da6c48ba3de4e5c11226953002e8

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
9 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#64998
No description provided.