Fix T64998: Multi window spin tool crash

There could be a more direct way to initialize a gizmo in a view,
for now this resolves the crash.